@@ -19,10 +19,12 @@ package org.apache.lucene.store;
 
 import java.nio.channels.FileChannel;
 import java.nio.channels.FileLock;
+import java.nio.channels.OverlappingFileLockException;
+import java.nio.file.StandardOpenOption;
 import java.io.File;
-import java.io.RandomAccessFile;
 import java.io.IOException;
-import java.util.HashSet;
+
+import org.apache.lucene.util.IOUtils;
 
 /**
  * <p>Implements {@link LockFactory} using native OS file
@@ -96,57 +98,16 @@ public class NativeFSLockFactory extends FSLockFactory {
 
   @Override
   public void clearLock(String lockName) throws IOException {
-    // Note that this isn't strictly required anymore
-    // because the existence of these files does not mean
-    // they are locked, but, still do this in case people
-    // really want to see the files go away:
-    if (lockDir.exists()) {
-      
-      // Try to release the lock first - if it's held by another process, this
-      // method should not silently fail.
-      // NOTE: makeLock fixes the lock name by prefixing it w/ lockPrefix.
-      // Therefore it should be called before the code block next which prefixes
-      // the given name.
-      makeLock(lockName).close();
-
-      if (lockPrefix != null) {
-        lockName = lockPrefix + "-" + lockName;
-      }
-      
-      // As mentioned above, we don't care if the deletion of the file failed.
-      new File(lockDir, lockName).delete();
-    }
+    makeLock(lockName).close();
   }
 }
 
 class NativeFSLock extends Lock {
 
-  private RandomAccessFile f;
   private FileChannel channel;
   private FileLock lock;
   private File path;
   private File lockDir;
-
-  /*
-   * The javadocs for FileChannel state that you should have
-   * a single instance of a FileChannel (per JVM) for all
-   * locking against a given file (locks are tracked per 
-   * FileChannel instance in Java 1.4/1.5). Even using the same 
-   * FileChannel instance is not completely thread-safe with Java 
-   * 1.4/1.5 though. To work around this, we have a single (static) 
-   * HashSet that contains the file paths of all currently 
-   * locked locks.  This protects against possible cases 
-   * where different Directory instances in one JVM (each 
-   * with their own NativeFSLockFactory instance) have set 
-   * the same lock dir and lock prefix. However, this will not 
-   * work when LockFactorys are created by different 
-   * classloaders (eg multiple webapps). 
-   * 
-   * TODO: Java 1.6 tracks system wide locks in a thread safe manner 
-   * (same FileChannel instance or not), so we may want to 
-   * change this when Lucene moves to Java 1.6.
-   */
-  private static HashSet<String> LOCK_HELD = new HashSet<>();
 
   public NativeFSLock(File lockDir, String lockFileName) {
     this.lockDir = lockDir;
@@ -169,89 +130,35 @@ class NativeFSLock extends Lock {
     if (!lockDir.exists()) {
       if (!lockDir.mkdirs())
         throw new IOException("Cannot create directory: " +
-                              lockDir.getAbsolutePath());
+            lockDir.getAbsolutePath());
     } else if (!lockDir.isDirectory()) {
       // TODO: NoSuchDirectoryException instead?
       throw new IOException("Found regular file where directory expected: " + 
-                            lockDir.getAbsolutePath());
+          lockDir.getAbsolutePath());
     }
-
-    String canonicalPath = path.getCanonicalPath();
-
-    boolean markedHeld = false;
-
+    
+    channel = FileChannel.open(path.toPath(), StandardOpenOption.CREATE, StandardOpenOption.WRITE);
+    boolean success = false;
     try {
-
-      // Make sure nobody else in-process has this lock held
-      // already, and, mark it held if not:
-
-      synchronized(LOCK_HELD) {
-        if (LOCK_HELD.contains(canonicalPath)) {
-          // Someone else in this JVM already has the lock:
-          return false;
-        } else {
-          // This "reserves" the fact that we are the one
-          // thread trying to obtain this lock, so we own
-          // the only instance of a channel against this
-          // file:
-          LOCK_HELD.add(canonicalPath);
-          markedHeld = true;
-        }
-      }
-
-      try {
-        f = new RandomAccessFile(path, "rw");
-      } catch (IOException e) {
-        // On Windows, we can get intermittent "Access
-        // Denied" here.  So, we treat this as failure to
-        // acquire the lock, but, store the reason in case
-        // there is in fact a real error case.
-        failureReason = e;
-        f = null;
-      }
-
-      if (f != null) {
-        try {
-          channel = f.getChannel();
-          try {
-            lock = channel.tryLock();
-          } catch (IOException e) {
-            // At least on OS X, we will sometimes get an
-            // intermittent "Permission Denied" IOException,
-            // which seems to simply mean "you failed to get
-            // the lock".  But other IOExceptions could be
-            // "permanent" (eg, locking is not supported via
-            // the filesystem).  So, we record the failure
-            // reason here; the timeout obtain (usually the
-            // one calling us) will use this as "root cause"
-            // if it fails to get the lock.
-            failureReason = e;
-          } finally {
-            if (lock == null) {
-              try {
-                channel.close();
-              } finally {
-                channel = null;
-              }
-            }
-          }
-        } finally {
-          if (channel == null) {
-            try {
-              f.close();
-            } finally {
-              f = null;
-            }
-          }
-        }
-      }
-
+      lock = channel.tryLock();
+      success = true;
+    } catch (IOException | OverlappingFileLockException e) {
+      // At least on OS X, we will sometimes get an
+      // intermittent "Permission Denied" IOException,
+      // which seems to simply mean "you failed to get
+      // the lock".  But other IOExceptions could be
+      // "permanent" (eg, locking is not supported via
+      // the filesystem).  So, we record the failure
+      // reason here; the timeout obtain (usually the
+      // one calling us) will use this as "root cause"
+      // if it fails to get the lock.
+      failureReason = e;
     } finally {
-      if (markedHeld && !lockExists()) {
-        synchronized(LOCK_HELD) {
-          if (LOCK_HELD.contains(canonicalPath)) {
-            LOCK_HELD.remove(canonicalPath);
-          }
+      if (!success) {
+        try {
+          IOUtils.closeWhileHandlingException(channel);
+        } finally {
+          channel = null;
         }
       }
     }
@@ -269,20 +176,8 @@ class NativeFSLock extends Lock {
           channel.close();
         } finally {
           channel = null;
-          try {
-            f.close();
-          } finally {
-            f = null;
-            synchronized(LOCK_HELD) {
-              LOCK_HELD.remove(path.getCanonicalPath());
-            }
-          }
         }
       }
-      // LUCENE-2421: we don't care anymore if the file cannot be deleted
-      // because it's held up by another process (e.g. AntiVirus). NativeFSLock
-      // does not depend on the existence/absence of the lock file
-      path.delete();
     } else {
       // if we don't hold the lock, and somebody still called release(), for
       // example as a result of calling IndexWriter.unlock(), we should attempt
