@@ -38,15 +38,10 @@ public class SolrCoreCheckLockOnStartupTest extends SolrTestCaseJ4 {
     super.setUp();
 
     System.setProperty("solr.directoryFactory", "org.apache.solr.core.SimpleFSDirectoryFactory");
-
-    IndexWriterConfig indexWriterConfig = new IndexWriterConfig(TEST_VERSION_CURRENT, null);
-    Directory directory = newFSDirectory(createTempDir("index"));
-    //creates a new index on the known location
-    new IndexWriter(
-        directory,
-        indexWriterConfig.setOpenMode(IndexWriterConfig.OpenMode.CREATE)
-    ).shutdown();
-    directory.close();
+    // test tests native and simple in the same jvm in the same exact directory:
+    // the file will remain after the native test (it cannot safely be deleted without the risk of deleting another guys lock)
+    // its ok, these aren't "compatible" anyway: really this test should not re-use the same directory at all.
+    new File(new File(initCoreDataDir, "index"), IndexWriter.WRITE_LOCK_NAME).delete();
   }
 
   @Test
